k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: siddhartha54/cart-service:v1
          ports:
            - containerPort: 9003
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: micro-app
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
  type: ClusterIP
