k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: micro-app
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: siddhartha54/user-service:v2
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: micro-app
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP
